--- a/offscore/index.html
+++ b/offscore/index.html
@@ -4,11 +4,11 @@
 	<title>Redirecting..</title>
 
     <meta charset=utf-8>
-    <link rel=canonical href="https://ferran.games">
-    <meta http-equiv=refresh content="0; url=https://ferran.games">
+    <link rel=canonical href="https://ferran.games/offscore">
+    <meta http-equiv=refresh content="0; url=https://ferran.games/offscore">
 
     <body>
-        <p>Redirecting to <a href="https://ferran.games">https://ferran.games</a>...</p>
+        <p>Redirecting to <a href="https://ferran.games/offscore">https://ferran.games/offscore</a>...</p>
         <!-- <script>
             window.location.hostname.replace("https://ferran.games")
         </script> -->
